[package]
name = "adventofcode-2022"
version = "0.1.12"
edition = "2021"
default-run = "adventofcode-2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scan_fmt = "0.2.6"
itertools = "0.10.5"
hashbrown = "0.13.1"
nalgebra = "0.31.4"
priority-queue = "1.3.0"
structopt = "0.3.26"
serde_json = "1.0.89"
indicatif = "0.17.2"